[gd_scene load_steps=4 format=3 uid="uid://cpmxl40jqwyx0"]

[ext_resource type="Script" uid="uid://cv3u4pomrywg5" path="res://demo.gd" id="1_0bhed"]
[ext_resource type="PackedScene" uid="uid://cafwivtquur0m" path="res://Model_j.tscn" id="1_5hfv0"]
[ext_resource type="PackedScene" uid="uid://df045uot7ngb" path="res://assets/UndertheSea.glb" id="3_m0rpm"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_0bhed")

[node name="Model_j1" parent="." instance=ExtResource("1_5hfv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.83521, 0, 6.68864)

[node name="Model_j2" parent="." instance=ExtResource("1_5hfv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.68015, 0, 10.9704)

[node name="Model_j3" parent="." instance=ExtResource("1_5hfv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.80431, 0, 12.1436)

[node name="UndertheSea" parent="." instance=ExtResource("3_m0rpm")]
transform = Transform3D(-9.99924, 0, 0.123218, 0, 10, 0, -0.123218, 0, -9.99924, 0.456768, 2.02232, 2.75789)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.976277, 0.216525, 0, -0.216525, 0.976277, 0.240079, 6.03303, 24.1584)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.626277, 0.7796, 0, -0.7796, 0.626277, 0, 10.7231, 7.72551)
